# EENX15

./: .gitignore  demo.txt
ArUco/: calibrate.py  calibration_chessboard.yaml  generate.py  main.py
Processing/ArUco/: ArUco.pde
arduino/: CMakeLists.txt  platformio.ini
arduino/include/shared/: coord.h  magnetic.h  motor.h  position.h  positionDolly.h  potentiometer.h  purePursuitController.h  servoManager.h
arduino/src/: crctest.cpp  main.cpp  servo_test.cpp  test_baudrate.cpp
arduino/src/shared/: purePursuitController.h
arduino/src/vera/: magnetic.h  motor.h  position.h  purePursuitController.h  vera.cpp
arduino/src/vera_dolly/: vera_dolly.cpp
aruco/cpp/: CMakeLists.txt  Kalman.cpp  Kalman.h  calibrate.cpp  cvwrapper.cpp  cvwrapper.h  defines.h  eulerRotation.h  important.txt  main.cpp  math.h  photo.cpp  ppc.cpp  purePc.h  purePursuitController.h  tcpclient.cpp  tcpclient.h  test.cpp  writemarkers.cpp  writevec.h
aruco/processing/ArUco/: ArUco.pde
aruco/processing/src/: ArUco.java
aruco/python/: main.py
arucocpp/: CMakeLists.txt
latex/lathund/: commands.tex  main.tex
matlab/: .gitignore  DriveAround.slx  InitFcn.m  PostFunction.m  distance2curve.m  experiment.slx
matlab/MPC_control/: Init.m  Myran.slx  NonlCond.m  ObjFcn.m  OptProblem.m  StateEstimate.m  StateFcn.m  vars.m
old-src/sonicsensor/: proximity_peripheral.h
old-src/vibrationsensor/: vibration_sensor.h
other/figures/src/: focal_length.java  marker_placement_1.java  marker_placement_2.java  markerincoordinate.java  markers_with_camera.java  tangential_distortion.java  template.java  transformation.java
other/oscilation_test/src/: main.java
platformio_files_wavgat/: wavgat.json
src/image/: brightest_spot.py
src/sonicsensor/: proximity_sensor.c
src/vibrationsensor/: vibration_sensor.c
